02_object_types/strings.txt
# String manipulation in Python

>>> print('hello')
hello
>>> # can be in single, double or triple quotes
>>> chai = "hello"
>>> chai
'hello'
>>> print(chai)
hello
>>> chai = "Masala chai"
>>> first_char = chai[0]
>>> print(first_char)
M
>>> # slicing
>>> chai
'Masala chai'
>>> slice_chai = chai[0:6]
>>> print(slice_chai)
Masala
>>> num_list = "0123456789"
>>> num_list[:]
'0123456789'
>>> num_list[3:]
'3456789'
>>> num_list[:7]
'0123456'
>>> num_list[0:7:2]
'0246'
>>> num_list[0:7:3]
'036'
>>> # repr() vs print()
>>> repr(num_list)
"'0123456789'"
>>> print(num_list)
0123456789
>>>
>>> # methods in strings
>>> chai
'Masala chai'
>>> print(chai.lower())
masala chai
>>> print(chai.upper())
MASALA CHAI
>>> chai
'Masala chai'
>>> chai = "  Masala chai  ""
  File "<stdin>", line 1
    chai = "  Masala chai  ""
                            ^
SyntaxError: unterminated string literal (detected at line 1)
>>> chai = "  Masala chai  "
>>> print(chai.strip())
Masala chai
>>> chai = "Lemon chai"
>>> print(chai.replace("Lemon","Ginger"))
Ginger chai
>>> chai
'Lemon chai'
>>> chai = "Lemon, Ginger, Masala, Mint"
>>> print(chai.split(','))
['Lemon', ' Ginger', ' Masala', ' Mint']
>>> print(chai.split(', '))
['Lemon', 'Ginger', 'Masala', 'Mint']
>>> # in above there is no space in strings as we splitted it on the basis of (",space")
>>>
>>> chai = "Masala chai"
>>> print(chai.find("chai"))
7
>>> print(chai.find("Chai"))
-1
>>> chai = "Masala Chai Chai Chai"
>>> print(chai.count("Chai"))
3
>>> chai_type = "Masala"
>>> quantity = 2
>>> order = "I ordered {} cups of {} chai"
>>> order
'I ordered {} cups of {} chai'
>>> print(order.format(quantity, chai_type))
I ordered 2 cups of Masala chai
>>> chai_variety = ["Lemon", "Masala", "Ginger"]
>>> chai_variety
['Lemon', 'Masala', 'Ginger']
>>> print("".join(chai_variety))
LemonMasalaGinger
>>> print(" ".join(chai_variety))
Lemon Masala Ginger
>>> print("-".join(chai_variety))
Lemon-Masala-Ginger
>>> print(", ".join(chai_variety))
Lemon, Masala, Ginger
>>> chai = "Masala Chai"
>>> print(len(chai))
11
>>> for letter in chai:
...     print(letter)
...
M
a
s
a
l
a

C
h
a
i
>>> path = "He said, \" Masala chai is awesome""
  File "<stdin>", line 1
    path = "He said, \" Masala chai is awesome""
                                               ^
SyntaxError: unterminated string literal (detected at line 1)
>>> path = "He said, \" Masala chai is awesome"
>>> path = "He said, \" Masala chai is awesome" "
  File "<stdin>", line 1
    path = "He said, \" Masala chai is awesome" "
                                                ^
SyntaxError: unterminated string literal (detected at line 1)
>>> path = "He said, \" Masala chai is awesome\" "
>>> path
'He said, " Masala chai is awesome" '
>>> chai = "Masala\n\Chai"
<stdin>:1: SyntaxWarning: "\C" is an invalid escape sequence. Such sequences will not work in the future. Did you mean "\\C
"? A raw string is also an option.
>>> chai = "Masala\nChai"
>>> chai
'Masala\nChai'
>>> print(chai)
Masala
Chai
>>> chai = r"Masala\nchai"
>>> print(chai)
Masala\nchai
>>> chai = r"c:\user\"
  File "<stdin>", line 1
    chai = r"c:\user\"
           ^
SyntaxError: unterminated string literal (detected at line 1); perhaps you escaped the end quote?
>>> chai = r"c:\\user\\"
>>> print(chai)
c:\\user\\
>>> chai = r"c:\user"
>>> print(chai)
c:\user
>>> chai = "c:\user"
  File "<stdin>", line 1
    chai = "c:\user"
           ^^^^^^^^^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \uXXXX escape
>>> chai = "c:\\user"
>>> print(chai)
c:\user
>>> chai  = "Masala chai"
>>> print("Masala" in chai)
True
>>> # try to write strings in double quotes -- ?
>>>